vaal-sys/vaal.h


typedef struct nn_tensor NNTensor;
typedef enum {
    VAAL_SUCCESS = 0,
    VAAL_ERROR_INTERNAL,
    VAAL_ERROR_INVALID_HANDLE,
    VAAL_ERROR_OUT_OF_MEMORY,
    VAAL_ERROR_OUT_OF_RESOURCES,
    VAAL_ERROR_NOT_IMPLEMENTED,
    VAAL_ERROR_INVALID_PARAMETER,
    VAAL_ERROR_TYPE_MISMATCH,
    VAAL_ERROR_SHAPE_MISMATCH,
    VAAL_ERROR_INVALID_SHAPE,
    VAAL_ERROR_INVALID_ORDER,
    VAAL_ERROR_INVALID_AXIS,
    VAAL_ERROR_MISSING_RESOURCE,
    VAAL_ERROR_INVALID_ENGINE,
    VAAL_ERROR_TENSOR_NO_DATA,
    VAAL_ERROR_KERNEL_MISSING,
    VAAL_ERROR_TENSOR_TYPE_UNSUPPORTED,
    VAAL_ERROR_TOO_MANY_INPUTS,
    VAAL_ERROR_SYSTEM_ERROR,
    VAAL_ERROR_INVALID_LAYER,
    VAAL_ERROR_MODEL_INVALID,
    VAAL_ERROR_MODEL_MISSING,
    VAAL_ERROR_STRING_TOO_LARGE,
    VAAL_ERROR_INVALID_QUANT,
    VAAL_ERROR_MODEL_GRAPH_FAILED,
    VAAL_ERROR_GRAPH_VERIFY_FAILED,
    VAAL_ERROR_UNKNOWN_DECODER = 0x10000,
    VAAL_ERROR_PARAMETER_READ_ONLY,
    VAAL_ERROR_PARAMETER_NOT_FOUND,
    VAAL_ERROR_PLATFORM_UNSUPPORTED,
    VAAL_ERROR_LIBRARY_UNINITIALIZED,
} VAALError;
typedef struct {
    float xmin;
    float ymin;
    float xmax;
    float ymax;
    float score;
    int label;
} VAALBox;
typedef struct vaal_context VAALContext;
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_setu(VAALContext*    context,
                    const char*     name,
                    const uint32_t* values,
                    size_t          num_values);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_set_func(VAALContext* context, const char* name, void* cb_ptr);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_parameter_get_raw(VAALContext* context,
                       const char*  name,
                       void**       ptr,
                       size_t*      length);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_model_file(VAALContext* context, const char* filename);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_model(VAALContext* context, size_t memory_size, const void* memory);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_unload_model(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_run_model(VAALContext* context);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_frame_memory(VAALContext*   context,
                       NNTensor*      tensor,
                       const void*    memory,
                       uint32_t       fourcc,
                       int32_t        width,
                       int32_t        height,
                       const int32_t* roi,
                       uint32_t       proc);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_frame_physical(VAALContext*   context,
                         NNTensor*      tensor,
                         uint64_t       physical,
                         uint32_t       fourcc,
                         int32_t        width,
                         int32_t        height,
                         const int32_t* roi,
                         uint32_t       proc);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_frame_dmabuf(VAALContext*   context,
                       NNTensor*      tensor,
                       int            dmabuf,
                       uint32_t       fourcc,
                       int32_t        width,
                       int32_t        height,
                       const int32_t* roi,
                       uint32_t       proc);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
VAALError
vaal_load_image(VAALContext*   context,
                NNTensor*      tensor,
                const uint8_t* image,
                size_t         len,
                const int32_t  roi[4],
                uint32_t       proc);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_load_image_file(VAALContext*   context,
                     NNTensor*      tensor,
                     const char*    filename,
                     const int32_t* roi,
                     uint32_t       proc);
VAAL_AVAILABLE_SINCE_1_1
VAAL_API
const char*
vaal_label(VAALContext* context, int label);
VAAL_AVAILABLE_SINCE_1_0
VAAL_API
VAALError
vaal_boxes(VAALContext* context,
           VAALBox*     boxes,
           size_t       max_boxes,
           size_t*      num_boxes);