vaal-sys/src/ffi.rs

extern "C" {
    #[doc = " Writes the provided value into the parameter.  The value is provided as a\n uint32_t array representation.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param value address of the first int value\n @param len length of the input array\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_setu(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        values: *const u32,
        num_values: usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Writes the function pointer into the context under a given key.\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param cb_ptr function pointer\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_set_func(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        cb_ptr: *mut ::std::os::raw::c_void,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Get the raw memory address of values given a key\n\n @param context\n @param name Parameter name as found using @ref vaal_parameter_query\n @param ptr Pointer to a void* which will receive the raw pointer to the data.\n @param length Optional pointer to size_t to receive the size of the data\n pointed to by ptr.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_parameter_get_raw(
        context: *mut VAALContext,
        name: *const ::std::os::raw::c_char,
        ptr: *mut *mut ::std::os::raw::c_void,
        length: *mut usize,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Loads a model into the context.  This function extends the DeepViewRT model\n loading API to add model parameters and enabling input/output acceleration.\n\n This function is a convenience around @ref vaal_load_model() to load the\n model from file into memory then calling the direct from memory function.\n\n This function will also attempt to detect the model's post-processing\n requirements such as the box decoder and assign default post-processing\n parameters.  These parameters can be adjusted using the various parameter set\n and get functions.\n\n @param context The @ref VAALContext which will own this model.\n @param filename the path to the DeepViewRT (RTM) model file.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_load_model_file(
        context: *mut VAALContext,
        filename: *const ::std::os::raw::c_char,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Loads a model into the context.  This function extends the DeepViewRT model\n loading API to add model parameters and enabling input/output acceleration.\n\n This function will also attempt to detect the model's post-processing\n requirements such as the box decoder and assign default post-processing\n parameters.  These parameters can be adjusted using the various parameter set\n and get functions.\n\n @param context The @ref VAALContext which will own this model.\n @param memory_size the size of the model blob.\n @param memory pointer to the start of the model blob (RTM file).\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_load_model(
        context: *mut VAALContext,
        memory_size: usize,
        memory: *const ::std::os::raw::c_void,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Unloads the model from the current context.\n\n @param context The @ref VAALContext from which to unload the model.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_unload_model(context: *mut VAALContext) -> VAALError;
}
extern "C" {
    #[doc = " Runs the model loaded by the VAALContext.\n\n @param context The @ref VAALContext with a loaded model to run.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_run_model(context: *mut VAALContext) -> VAALError;
}
extern "C" {
    #[doc = " Loads a video frame from virtual memory into the tensor, handling any\n required conversions (such as casting to floating point, if required). The\n frame must have a stride calculated from with and a known fourcc code, for\n example YUYV would need stride to be width*2 whereas NV12 would required\n stride to be width. For planar formats each plane must be packed\n sequentially, so for NV12 the UV planes must follow immediately after the Y\n plane.\n\n @param context VAALContext which owns the model into which the video frame\n will be loaded.\n @param tensor optional DeepViewRT tensor to receive the video frame.  If NULL\n the model's first input tensor will be used.\n @param memory the virtual memory location of the frame.\n @param fourcc the fourcc code for the video frame which will be used to\n convert to the model's expected format (assumed to be RGB).\n @param width the width of the source frame, it will be resized to the target\n tensor's width.\n @param height the height of the source frame, it will be resized to the\n target tensor's height.\n @param roi optional roi which will cause the input frame to be cropped before\n resizing.\n @param proc mask of image pre-processing to apply on load.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_load_frame_memory(
        context: *mut VAALContext,
        tensor: *mut NNTensor,
        memory: *const ::std::os::raw::c_void,
        fourcc: u32,
        width: i32,
        height: i32,
        roi: *const i32,
        proc_: u32,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Loads a video frame from physical memory into the tensor, handling any\n required conversions (such as casting to floating point, if required). The\n frame must have a stride calculated from with and a known fourcc code, for\n example YUYV would need stride to be width*2 whereas NV12 would required\n stride to be width. For planar formats each plane must be packed\n sequentially, so for NV12 the UV planes must follow immediately after the Y\n plane.\n\n @param context VAALContext which owns the model into which the video frame\n will be loaded.\n @param tensor optional DeepViewRT tensor to receive the video frame.  If NULL\n the model's first input tensor will be used.\n @param memory the virtual memory location of the frame.\n @param fourcc the fourcc code for the video frame which will be used to\n convert to the model's expected format (assumed to be RGB).\n @param width the width of the source frame, it will be resized to the target\n tensor's width.\n @param height the height of the source frame, it will be resized to the\n target tensor's height.\n @param roi optional roi which will cause the input frame to be cropped before\n resizing.\n @param proc mask of image pre-processing to apply on load.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_load_frame_physical(
        context: *mut VAALContext,
        tensor: *mut NNTensor,
        physical: u64,
        fourcc: u32,
        width: i32,
        height: i32,
        roi: *const i32,
        proc_: u32,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Loads a video frame from a dmabuf video buffer into the tensor, handling any\n required conversions (such as casting to floating point, if required). The\n frame must have a stride calculated from with and a known fourcc code, for\n example YUYV would need stride to be width*2 whereas NV12 would required\n stride to be width. For planar formats each plane must be packed\n sequentially, so for NV12 the UV planes must follow immediately after the Y\n plane.\n\n @param context VAALContext which owns the model into which the video frame\n will be loaded.\n @param tensor optional DeepViewRT tensor to receive the video frame.  If NULL\n the model's first input tensor will be used.\n @param dmabuf file descriptor to a dmabuf holding the video frame.\n @param fourcc the fourcc code for the video frame which will be used to\n convert to the model's expected format (assumed to be RGB).\n @param width the width of the source frame, it will be resized to the target\n tensor's width.\n @param height the height of the source frame, it will be resized to the\n target tensor's height.\n @param roi optional roi which will cause the input frame to be cropped before\n resizing.\n @param proc mask of image pre-processing to apply on load.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_load_frame_dmabuf(
        context: *mut VAALContext,
        tensor: *mut NNTensor,
        dmabuf: ::std::os::raw::c_int,
        fourcc: u32,
        width: i32,
        height: i32,
        roi: *const i32,
        proc_: u32,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Convenience around the @ref vaal_load_frame_memory() function which will\n first decode the image into a raw buffer.  Once the image has been decoded it\n will be sent to the load_frame function for further processing.\n\n To load an image directly from file see @ref vaal_load_image_file() instead.\n\n The following image formats are supported.\n\n - JPEG\n - PNG\n - BMP\n - TIFF\n\n @param context VAALContext which owns the model into which the video frame\n will be loaded.\n @param tensor optional DeepViewRT tensor to receive the video frame.  If NULL\n the model's first input tensor will be used.\n @param image buffer to encoded image.\n @param len size of the image buffer.\n @param roi optional roi which will cause the input frame to be cropped before\n resizing.\n @param proc mask of image pre-processing to apply on load.\n\n @return VAALError\n\n @since 1.1"]
    pub fn vaal_load_image(
        context: *mut VAALContext,
        tensor: *mut NNTensor,
        image: *const u8,
        len: usize,
        roi: *const i32,
        proc_: u32,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Convenience around the @ref vaal_load_image() function which first loads the\n image from a file.\n\n @param context VAALContext which owns the model into which the video frame\n will be loaded.\n @param tensor optional DeepViewRT tensor to receive the video frame.  If NULL\n the model's first input tensor will be used.\n @param filename path to image to be loaded.\n @param roi optional roi which will cause the input frame to be cropped before\n resizing.\n @param proc mask of image pre-processing to apply on load.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_load_image_file(
        context: *mut VAALContext,
        tensor: *mut NNTensor,
        filename: *const ::std::os::raw::c_char,
        roi: *const i32,
        proc_: u32,
    ) -> VAALError;
}
extern "C" {
    #[doc = " Returns the text value for the label.  If the label is not available in the\n model then NULL will be returned.\n\n @param context The VAALContext owning the model from which we want labels.\n @param label The label index to be translated to a string.\n\n @return label string or NULL.\n\n @since 1.1"]
    pub fn vaal_label(
        context: *mut VAALContext,
        label: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Handles post-processing the model's output and reading the bounding boxes\n into the user provided array of boxes, up to @param max_boxes.  The function\n can be called with max_boxes set to 0 to cause the function to return the\n number of boxes detected, doing so causes the post-processing function to\n avoid storing the box results into @param boxes and ignoring @param max_boxes\n for early stopping.\n\n @param context The VAALContext which owns the model from which we want boxes.\n @param boxes An array of boxes which will received the decoded results.\n @param max_boxes The size of @param boxes limits the maximum number of boxes.\n @param num_boxes The number of boxes detected.\n\n @return VAALError\n\n @since 1.0"]
    pub fn vaal_boxes(
        context: *mut VAALContext,
        boxes: *mut VAALBox,
        max_boxes: usize,
        num_boxes: *mut usize,
    ) -> VAALError;
}
